// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataDownloadDialogActions Should render two buttons and NO loading spinner when not loading 1`] = `
<div>
  <div
    class="ui-ButtonStrip"
  >
    <div
      class="ui-Button"
    >
      Cancel
    </div>
    <div
      class="ui-Button"
    >
      Download
    </div>
  </div>
</div>
`;

exports[`DataDownloadDialogActions Should render two buttons and show loading spinner when loading 1`] = `
<div>
  <div
    class="ui-ButtonStrip"
  >
    <div
      class="ui-Button"
    >
      Cancel
    </div>
    <div
      class="ui-Button"
    >
      Download
      <div
        class="ui-CircularLoader"
      />
    </div>
  </div>
</div>
`;
